revno: 13158 [merge] message:   (GIS) New sharemenuitem: Embed plugin config + (PT) Table layout bug fixed.
committer: Jan Henrik Overland <janhenrik.overland@gmail.com>
branch nick: dhis2
timestamp: Thu 2013-12-05 17:37:18 +0100

--- a/dhis-2/dhis-web/dhis-web-mapping/src/main/webapp/dhis-web-mapping/app/styles/style.css
+++ b/dhis-2/dhis-web/dhis-web-mapping/src/main/webapp/dhis-web-mapping/app/styles/style.css
@@ -560,6 +560,15 @@ gis-combo .x-form-item-label {
     padding-left: 18px;
 }
 
+.gis-menu-item-tablelayout {
+    background-image:url('../images/dl_tablelayout.png');
+    padding-left: 18px;
+}
+.gis-menu-item-datasource {
+    background-image:url('../images/dl_datasource.png');
+    padding-left: 18px;
+}
+
 	/* Menu align */
 .gis-btn-menu {
 	margin-top: 2px;
@@ -795,6 +804,12 @@ gis-combo .x-form-item-label {
 
 .gis-textarea .x-form-field {
 	font-size: 11px;
+}
+
+.gis-textarea.monospaced textarea {
+	font-family: monospace, consolas, courier new !important;
+	padding: 4px;
+	border: 0 none;
 }
 
 
