--- a/dhis-2/dhis-web/dhis-web-pivot/src/main/webapp/dhis-web-pivot/app/styles/style.css
+++ b/dhis-2/dhis-web/dhis-web-pivot/src/main/webapp/dhis-web-pivot/app/styles/style.css
@@ -985,4 +985,5 @@ table.pivot {
 .ns-textarea.monospaced textarea {
 	font-family: monospace, consolas, courier new;
 	padding: 4px;
+	border: 0 none;
 }
